--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==1.13.3
+annotated-types==0.7.0
 asgiref==3.5.2
 certifi==2022.9.24
 charset-normalizer==2.1.1
@@ -10,10 +12,16 @@ greenlet==2.0.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.6
 MarkupSafe==2.1.1
+pydantic==2.9.2
+pydantic_core==2.23.4
 pytz==2022.6
 requests==2.28.1
+rss-parser==2.1.0
 SQLAlchemy==1.4.44
 sqlparse==0.4.3
+typing_extensions==4.12.2
 urllib3==1.26.12
 Werkzeug==2.2.2
+xmltodict==0.13.0
