--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.6
 MarkupSafe==2.1.1
+psycopg2==2.9.10
 pydantic==2.9.2
 pydantic_core==2.23.4
 pytz==2022.6
